--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toast-it",
+  "name": "@dhafitf/toast-it",
   "description": "A simple toast library",
   "version": "1.0.0",
   "license": "MIT",
